<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E2535252">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_32sdp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_32sdp"
            android:background="@drawable/rounded_rectangle"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txttop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_38sdp"
                android:fontFamily="@font/sf_regular"
                android:text="@string/discard"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_18sdp" />

            <TextView
                android:id="@+id/txtExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/_4sdp"
                android:text="@string/you_go_back_"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintTop_toBottomOf="@id/txttop" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnNo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/no"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12sdp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_38sdp"
                    android:layout_gravity="center"
                    android:layout_weight=".03"
                    android:background="@drawable/ic_line" />

                <Button
                    android:id="@+id/btnOk"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_38sdp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/yes"
                    android:textColor="@color/colorPurple"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

        </LinearLayout>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_dialog_box_discard" />


    </RelativeLayout>

    <FrameLayout
        android:id="@+id/framlayourAds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:minHeight="@dimen/_200sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_8sdp"

            android:src="@drawable/ic_exit_dialog_bg"
            app:layout_constraintBottom_toTopOf="@id/txttop"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>