<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/white"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    tools:targetApi="28">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_12sdp">


        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_4sdp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_recording_play" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_4sdp"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_recName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/sf_medium"
                android:maxLines="1"
                android:text="@string/str_baby"
                android:textAlignment="viewStart"
                android:textColor="@color/colorPurple"
                android:textSize="@dimen/_12sdp" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@id/tv_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:paddingStart="0dp"
                    android:paddingEnd="@dimen/_4sdp"
                    android:text="@string/share_app"
                    android:textColor="#ff323232"
                    android:textSize="14sp" />

                <TextView
                    android:id="@id/tv_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:paddingHorizontal="4dp"
                    android:text="@string/share_app"
                    android:textColor="#ff323232"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:paddingHorizontal="4dp"
                    android:text="@string/share_app"
                    android:textColor="#ff323232"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>


        <ImageButton
            android:id="@id/btn_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_previous_player"
            android:tint="@color/colorBlack"
            android:tintMode="src_in" />

        <ImageButton
            android:id="@id/btn_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_baseline_pause_24"
            android:tag="@string/btn_pause"
            android:tint="@color/colorBlack"
            android:tintMode="src_in" />

        <ImageButton
            android:id="@id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_next_player"
            android:tint="@color/colorBlack" />

    </LinearLayout>

</LinearLayout>