<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E2535252">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle_ads_free"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgBg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_ads_free_dailog"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_adsFreeText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/please_buy_the_subscription_"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toTopOf="@id/btnAdsFree"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgBg"

            />

        <Button
            android:id="@+id/btnAdsFree"
            android:layout_width="@dimen/_160sdp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:text="@string/purchase"
            android:textAllCaps="false"
            android:fontFamily="@font/sf_bold"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp"
            android:background="@drawable/purchase_btn"
            app:layout_constraintBottom_toTopOf="@+id/btnRemindMeLater"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_adsFreeText" />

        <Button
            android:id="@+id/btnRemindMeLater"
            android:layout_width="@dimen/_160sdp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:fontFamily="@font/sf_bold"
            android:layout_marginBottom="@dimen/_16sdp"
            android:text="@string/remind_me_later"
            android:textColor="@color/textField"
            android:textSize="@dimen/_10sdp"
            android:background="@drawable/remind_me_later"
            app:layout_constraintTop_toBottomOf="@id/btnAdsFree"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>