<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_32sdp"
            android:background="@drawable/rounded_rectangle"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txttop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_38sdp"
                android:fontFamily="@font/sf_regular"
                android:text="@string/save"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_18sdp" />

            <TextView
                android:id="@+id/txtExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/enter_a_name_for_this_audio"
                android:textColor="#747474"
                android:textSize="@dimen/_16sdp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_margin="@dimen/_16sdp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/mEditTextFileName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edt_bg"
                    android:hint="@string/please_enter_file_name"
                    android:textColorHint="@color/grey_500"
                    android:padding="@dimen/_18sdp"
                    android:textColor="#fa151414"
                    android:textSize="@dimen/_12sdp" />

                <ImageButton
                    android:id="@+id/btn_clearEditText"
                    android:padding="@dimen/_8sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_cancel_dailog" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/mTxtCancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/cancel"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12sdp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_38sdp"
                    android:layout_gravity="center"
                    android:layout_weight=".03"
                    android:background="@drawable/ic_line" />

                <Button
                    android:id="@+id/btnOk"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/save"
                    android:textColor="@color/colorPurple"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>


        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_dialog_box_save" />


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>